turtleart.lessons.turtleart.Main.Star.scala.error
Source:8: error: identifier expected but '}' found.
	}
        ^