turtleart.lessons.turtleart.Main.Star.scala.code
override def run() {
	gauche(5);
	for (i<- 1 to 5) {
		avance(50);
		gauche(50);
		avance(50):	
	}
}
